--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,10 @@ passenv = CI TRAVIS TRAVIS_*
 [testenv:pycodestyle]
 deps =
   flake8
-  pycodestyle
+  # Flake8 doesn't work with latest pycodestyle
+  # See https://gitlab.com/pycqa/flake8/issues/406 and
+  #   https://github.com/PyCQA/pycodestyle/issues/741
+  pycodestyle<2.4.0
 commands =
   pycodestyle stix2slider
   flake8 stix2slider
