flakey, testing for 2.0 and 2.1

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,py34,py35,py36,pycodestyle,isort-check
+envlist = py{27,34,35,36,37}-stix{20,21},pycodestyle,isort-check
 
 [testenv]
 deps =
@@ -8,6 +8,9 @@ deps =
     pytest
     pytest-cov
     coverage
+setenv =
+    stix20: VERSION = 2.0
+    stix21: VERSION = 2.1
 commands =
     py.test --cov=stix2slider stix2slider/test/ --cov-report term-missing
 
@@ -35,14 +38,19 @@ max-line-length=160
 exclude=stix2slider/pattern_grammar/*
 
 [flake8]
-ignore=F403,F405
+ignore=F403,F405,W504
 max-line-length=160
 exclude=stix2slider/pattern_grammar/*
 
 [travis]
 python =
   2.7: py27, pycodestyle
-  3.3: py33, pycodestyle
   3.4: py34, pycodestyle
   3.5: py35, pycodestyle
   3.6: py36, pycodestyle
+  3.7: py37, pycodestyle
+
+[travis:env]
+VERSION =
+    2.0: stix20
+    2.1: stix21
