--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@
     -   id: flake8
         args:
         - --max-line-length=160
-        - --ignore=F403,F405
+        - --ignore=F403,F405,W504
     -   id: check-merge-conflict
 -   repo: https://github.com/FalconSocial/pre-commit-python-sorter
     sha: b57843b0b874df1d16eb0bef00b868792cb245c2
