--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,py34,py35,py36,pycodestyle,isort-check
+envlist = py27,py33,py34,py35,py36,pycodestyle,isort-check,packaging
 
 [testenv]
 deps =
@@ -39,10 +39,16 @@ ignore=F403,F405
 max-line-length=160
 exclude=stix2slider/pattern_grammar/*
 
+[testenv:packaging]
+deps =
+  readme_renderer
+commands =
+  python setup.py check -r -s
+
 [travis]
 python =
   2.7: py27, pycodestyle
   3.3: py33, pycodestyle
   3.4: py34, pycodestyle
   3.5: py35, pycodestyle
-  3.6: py36, pycodestyle
+  3.6: py36, pycodestyle, packaging
