--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,7 +1,11 @@
 [settings]
 check=1
 diff=1
-known_third_party=cybox,mixbox,sdv,six,stix,stix2,stix2validator,stixmarx
+known_third_party=cybox,mixbox,pytest,sdv,six,stix,stix2,stix2validator,stixmarx
 known_first_party=stix2slider
 not_skip=__init__.py
+multi_line_output=5
 force_sort_within_sections=1
+import_heading_stdlib=Standard Library
+import_heading_firstparty=internal
+import_heading_thirdparty=external
