--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,8 @@ commands =
 [testenv:isort-check]
 deps = isort
 commands =
-    isort -rc stix2slider -df
-    isort -rc stix2slider -c
+    isort stix2slider --df
+    isort stix2slider -c
 
 [flake8]
 ignore=F403,F405,W504
