--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{35,36,37,38}-stix{20,21},pycodestyle,isort-check,packaging
+envlist = py{35,36,37,38}-stix{20,21},packaging,pre-commit-check
 
 [testenv]
 deps =
@@ -14,38 +14,29 @@ setenv =
 commands =
     py.test --cov=stix2slider stix2slider/test/ --cov-report term-missing
 
-passenv = CI TRAVIS TRAVIS_*
-
-[testenv:pycodestyle]
-deps =
-  flake8
-commands =
-  flake8 stix2slider
-
-[testenv:isort-check]
-deps = isort
-commands =
-    isort stix2slider --df
-    isort stix2slider -c
-
-[flake8]
-ignore=F403,F405,W504
-max-line-length=160
+passenv = GITHUB_*
 
 [testenv:packaging]
 deps =
-  readme_renderer
+  twine
 commands =
-  python setup.py check -r -s
+  python setup.py sdist bdist_wheel --universal
+  twine check dist/*
 
-[travis]
+[testenv:pre-commit-check]
+deps =
+  pre-commit
+commands =
+  pre-commit run --all-files
+
+[gh-actions]
 python =
   3.5: py35
   3.6: py36
   3.7: py37
-  3.8: py38, pycodestyle, packaging
+  3.8: py38, packaging, pre-commit-check
 
-[travis:env]
+[gh-actions:env]
 VERSION =
     2.0: stix20
     2.1: stix21
