--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
-known_third_party=cybox,mixbox,pytest,sdv,six,stix,stix2,stix2validator,stixmarx
+known_third_party=cybox,mixbox,pytest,sdv,stix,stix2,stix2validator,stixmarx
 known_first_party=stix2slider
 multi_line_output=5
 force_sort_within_sections=1
